Upgrade estruct and img

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="keywords" content="velox, pagina veloz, velox page, pagina inicial, página inicial, veloxpage, home page, homepage, pagina de atalhos, melhor pagina inicial, página inicial com icons.">
   	<meta name="author" content="E.Martins">
     <title>Veloz Easy - #Made for you.</title>
-  	<link rel="shortcut icon" type="image/x-icon" href="./esset/img/ve_icon.png">
-  	<link rel="stylesheet" href="./esset/css/reset.css">
-  	<link rel="stylesheet" href="./esset/css/style.css">
+  	<link rel="shortcut icon" type="image/x-icon" href="./assets/img/ve_icon.png">
+  	<link rel="stylesheet" href="./assets/css/reset.css">
+  	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <aside>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="nav-column">						
                             <a class="pub" href="https://www.google.com/intl/pt-BR/chrome/" target="_blank">
-                            <img alt="Download do Google Chrome" src="./esset/img/chrome.gif"/>
+                            <img alt="Download do Google Chrome" src="./assets/img/chrome.gif"/>
                             </a>
                         </div>
                     </section>
@@ -113,7 +113,7 @@
                         </div>
                         <div class="nav-column">						
                             <a class="pub" class="nav-img" href="https://www.mozilla.org/pt-BR/firefox/all/" target="_blank">
-                                <img alt="Download Firefox" src="./esset/img/firefox.gif"/>
+                                <img alt="Download Firefox" src="./assets/img/firefox.gif"/>
                             </a>
                         </div>
                     </section>
@@ -524,10 +524,10 @@
                     <a class="b4" href="https://web.whatsapp.com/" target="_blank" title="Whatsapp Web"></a>
                     <a class="b5" href="http://www.mercadolivre.com.br/" target="_blank" title="Mercado Livre"></a>
                     <a class="b6" href="http://www.olx.com.br/" target="_blank" title="OLX"></a>
-                    <a class="b7" href="http://www.correios.com.br/" target="_blank" title="Correios"></a>
-                    <a class="b8" href="http://rachacuca.com.br/" target="_blank" title="Racha Cuca"></a>
-                    <a class="b9" href="http://www.caixa.gov.br/" target="_blank" title="Caixa Econômica"></a>
-                    <a class="b10" href="http://www.bb.com.br/" target="_blank" title="Banco do Brasil"></a>
+                    <a class="b7" href="http://www.correios.com.br/" target="_blank" title="Correios"></a>                    
+                    <a class="b8" href="http://www.caixa.gov.br/" target="_blank" title="Caixa Econômica"></a>
+                    <a class="b9" href="http://www.bb.com.br/" target="_blank" title="Banco do Brasil"></a>
+                    <a class="b10" href="https://www.max.com/br/pt" target="_blank" title="Max"></a>
                     <a class="b11" href="https://www.netflix.com" target="_blank" title="Netfliz"></a>
                     <a class="b12" href="https://www.primevideo.com" target="_blank" title="Amazon Prime"></a>
         
@@ -595,6 +595,6 @@
       	</section>
       	<section class="copy">Copyright &#169; <span id="copy"></span> Veloz Easy - Todos os Direitos Reservados.</section>
     </footer>  	
-    <script src="./esset/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
