--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="velox, pagina veloz, velox page, pagina inicial, página inicial, veloxpage, home page, homepage, pagina de atalhos, melhor pagina inicial, página inicial com icons.">
   	<meta name="author" content="E.Martins">
     <title>Veloz Easy - #Made for you.</title>
-  	<link rel="shortcut icon" type="image/x-icon" href="./assets/img/ve_icon.png">
+  	<link rel="shortcut icon" type="image/x-icon" href="./assets/images/ve_icon.png">
   	<link rel="stylesheet" href="./assets/css/reset.css">
   	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="nav-column">						
                             <a class="pub" href="https://www.google.com/intl/pt-BR/chrome/" target="_blank">
-                            <img alt="Download do Google Chrome" src="./assets/img/chrome.gif"/>
+                            <img alt="Download do Google Chrome" src="./assets/images/chrome.gif"/>
                             </a>
                         </div>
                     </section>
@@ -113,7 +113,7 @@
                         </div>
                         <div class="nav-column">						
                             <a class="pub" class="nav-img" href="https://www.mozilla.org/pt-BR/firefox/all/" target="_blank">
-                                <img alt="Download Firefox" src="./assets/img/firefox.gif"/>
+                                <img alt="Download Firefox" src="./assets/images/firefox.gif"/>
                             </a>
                         </div>
                     </section>
