upgrade include now site

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                     <a class="a4" href="https://www.linkedin.com/" target="_blank" title="Linkedin"></a>
                     <a class="a5" href="http://ask.fm/" target="_blank" title="Ask FM"></a>
                     <a class="a6" href="http://www.suamusica.com.br/" target="_blank" title="Sua Música"></a>
-                    <a class="a7" href="http://palcomp3.com/" target="_blank" title="Palco MP3"></a>
+                    <a class="a7" href="https://www.upscale.media/pt" target="_blank" title="AI Upscaler de imagem"></a>
                     <a class="a8" href="http://www.online-image-editor.com/?language=portuguese" target="_blank"
                         title="Editor de Fotos"></a>
                     <a class="a9" href="https://pt.savefrom.net/9/" target="_blank" title="Vídeo Download"></a>
