Update script e index, modificação da estrutura do search.

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                             <li class="youtube" title="Pesquisar vídeos no youtube"></li>
                         </ul>
                     </div>
-                    <form action="https://www.google.com.br/search" id="search" method="get">
+                    <form action="https://www.google.com.br/search" class="search" method="get">
                         <input class="q" name="q" type="text">
                         <button class="sb" type="submit"></button>
                     </form>
